--- a/interests.html
+++ b/interests.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/interests.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 
     <title>A Look into Your Future</title>
@@ -19,6 +20,17 @@
           <h1>It seems like you might be interested in...</h1>
           <p>These are you interests...</p>
         </div>
+      </div>
+      <div>
+        <form id="yes_no" action="">
+          <input type="radio" name="rdo" id="yes"/>
+          <input type="radio" name="rdo" id="no" checked/>
+          <div class="switch">
+            <label for="yes">Yes</label>
+            <label for="no">No</label>
+            <span></span>
+          </div>
+        </form>
       </div>
     <a href="matches.html"><button type="button" class="btn btn-primary"><i class="far fa-address-book"></i>
    View matches</button></a>
