updates matches js and adds cards for interests

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>hello, world</p>
+            <p>Welcome to [insert name of our company]</p>
+            <p>Our mission is to ...</p>
+            <img src="#"></img>
+            <p>Are you ready to go on a journey?</p>
             <a href="survey.html"><button type="button" class="btn btn-primary"><i class="fas fa-clipboard-list"></i>
             Take an interest survey!</button></a>
           </div>
