--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,7 @@
 		    <h1 class="text-center">Let's explore some of your interests.</h1>
     </div>
 	</div>
-	<div class="text-center">
+	<div class="card inner-card text-center">
     <p id="q_block" class="question text-center"></p>
     <br>
     <!-- support for mobile browsers XS -->
@@ -48,8 +48,9 @@
         <button type="button" onClick="add_question();" class = "btn ans"><i class="far fa-smile fa-10x"></i></button>
       </div>
     </div>
+    <br>
+    <br>
 	</div>
-  <br>
   <br>
 	<div class="text-center results">
     <a href="interests.html"><button type="button" class="btn btn-primary submit"><i class="fas fa-binoculars"></i>
