--- a/interests.html
+++ b/interests.html
@@ -17,8 +17,9 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>It seems like you might be interested in...</h1>
-          <p>These are you interests...</p>
+          <br>
+          <h1>It seems like you might be interested in Building and Construction Trades.</h1>
+          <p>An occupation in this field is called Architectural and Engineering Manager.</p>
         </div>
         <div class="card-columns">
   <div class="card">
