updates mission statement

--- a/matches.html
+++ b/matches.html
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <title>A Look into Your Future</title>
   </head>
-  <body>
+  <body class="noScroll">
     <div class="container">
       <!-- start of carousel -->
       <div id="my_carousel" class="carousel slide" data-pause="true">
@@ -52,6 +52,7 @@
                       <h5 class="card-title subtitle">Jerome Daniels</h5>
                       <p><em>Assistant Branch Manager</em></p>
                       <p class="card-text">Jerome oversees the teller function, ATM balancing, night depository processing, and customer service duties.</p>
+                      <br>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
@@ -131,6 +132,7 @@
                       <h5 class="card-title subtitle">Derrick Long</h5>
                       <p><em>Civil Engineer</em></p>
                       <p class="card-text">Derrick plans, designs and oversees construction and maintenance of building structures and infrastructure.</p>
+                      <br>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                       </div>
@@ -146,6 +148,7 @@
                       <h5 class="card-title subtitle">Katherine Williams</h5>
                       <p><em>Construction Assistant</em></p>
                       <p class="card-text">Katherine assists construction tradespeople on construction sites. She ensures materials and tools are on site.</p>
+                      <br>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                       </div>
