--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="col-12">
             <p class="title">Welcome to CommUnity Connect!</p>
-            <p>Our mission is to enable students to survey and explore their community's assets to identify multiple career pathways and mentors, who can shape their professional pathways.</p>
+            <p>Our mission is to enable students to survey and explore their community's assets to identify multiple career pathways and mentors, who can shape their professional journey.</p>
             <p>Enter your location in the map on the left to explore businesses in your community.</p>
             <img src="image/graphic.jpg" width=100%></img>
             <br>
