--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <br>
             <p class="subtitle"><em>Are you ready to go on a journey?</em></p>
             <br>
-            <a href="survey.html"><button type="button" class="btn btn-primary"><i class="fas fa-clipboard-list"></i>
-            Take an interest survey!</button></a>
+            <a href="community.html"><button type="button" class="btn btn-primary"><i class="fas fa-clipboard-list"></i>
+            Checkout my Community!</button></a>
             <br>
             <br>
             <br>
