--- a/matches.html
+++ b/matches.html
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <title>A Look into Your Future</title>
   </head>
-  <body class="noScroll">
+  <body>
     <div class="container">
       <!-- start of carousel -->
       <div id="my_carousel" class="carousel slide" data-pause="true">
