center button on homepage and update business names

--- a/matches.html
+++ b/matches.html
@@ -23,8 +23,8 @@
               <br>
               <i class="fas fa-piggy-bank fa-8x mx-auto library"></i>
               <div class="card-body">
-                <h5 class="card-title title">Long Island Credit Union</h5>
-                <p class="card-text subtitle">Long Island Credit Union has been around since 1961 serving the Long Island community.</p>
+                <h5 class="card-title title">Elevating Equity</h5>
+                <p class="card-text subtitle">Elevating Equity has been around since 1961 serving the Greater Boston community.</p>
               </div>
               <div class="row">
                 <div class="col-md-4">
@@ -85,8 +85,8 @@
               <br>
               <i class="fas fa-home fa-8x mx-auto bank owl"></i>
               <div class="card-body">
-                <h5 class="card-title title">Bob-Joe’s Construction Company</h5>
-                <p class="card-text subtitle">Bob-Joe has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
+                <h5 class="card-title title">TIErs Construction Company</h5>
+                <p class="card-text subtitle">TIErs Construction Company has been a trusted hometown source for exterior home improvement since 1954. They specialize in replacement windows, siding, roofing and doors.</p>
               </div>
               <!-- Thomas' profile -->
                <div class="d-none row person2">
@@ -116,7 +116,7 @@
                       <br>
                       <h5 class="card-title subtitle">Thomas Napier</h5>
                       <p><em>Architectural and Engineering Manager</em></p>
-                      <p class="card-text">Thomas has been with Bob-Joe for 15 years working his way up from doing household roofing to being a project manager on long-term contracts. </p>
+                      <p class="card-text">Thomas has been with TIErs for 15 years working his way up from doing household roofing to being a project manager on long-term contracts. </p>
                       <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <button class="btn btn-primary" type="button" onClick="change_view('person2','profiles-construction');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
@@ -166,8 +166,8 @@
               <br>
               <i class="fas fa-headphones fa-8x mx-auto radio"></i>
               <div class="card-body">
-                <h5 class="card-title title">WKZ Radio Station</h5>
-                <p class="card-text subtitle">WKZ Radio is a rock music station that brings you all the best rock songs from the past decades.</p>
+                <h5 class="card-title title">Solidarity Radio Station</h5>
+                <p class="card-text subtitle">Solidarity Radio Station is a rock music station that brings you all the best rock songs from the past decades.</p>
               </div>
               <!-- Rachel's profile -->
                <div class="d-none row person1">
@@ -178,7 +178,7 @@
                       <br>
                       <br>
                       <p class="text-left subtitle">Rachel Matthews</p>
-                      <p class="text-left">As the radio and television announcer for WKZ Rachel hosts civic, charitable, or promotional events that are broadcast over television or radio. She also writes and edits video and scripts for broadcasts. She is responsible for locating guests to appear on talk or interview shows and uses video and recording technology in all her programs.</p>
+                      <p class="text-left">As the radio and television announcer for Solidarity Rachel hosts civic, charitable, or promotional events that are broadcast over television or radio. She also writes and edits video and scripts for broadcasts. She is responsible for locating guests to appear on talk or interview shows and uses video and recording technology in all her programs.</p>
                       <button class="btn btn-primary" type="button" onClick="change_view('profiles-radio','person1');"><i class="fas fa-chevron-circle-left"></i> Go Back</button>
                     </div>
                   </div>
@@ -195,7 +195,7 @@
                       <br>
                       <h5 class="card-title subtitle">Rachel Matthews</h5>
                       <p><em>Radio and television Announcer</em></p>
-                      <p class="card-text">Rachel has been with WKZ for 5 years. She started as an intern and worked her way up to full-time announcer.</p>
+                      <p class="card-text">Rachel has been with Solidarity for 5 years. She started as an intern and worked her way up to full-time announcer.</p>
                       <a href="mailto:someone@example.com?Subject=Hello%20again" target="_blank" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <button class="btn btn-primary" type="button" onClick="change_view('person1','profiles-radio');"><i class="fas fa-user-circle"></i> Profile</button>
                     </div>
@@ -211,6 +211,7 @@
                       <h5 class="card-title subtitle">Janine Walker</h5>
                       <p><em>Producer</em></p>
                       <p class="card-text"> Janine creates content and manages the whole radio production process for both live and recorded programmes.</p>
+                      <br>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
@@ -226,6 +227,7 @@
                       <h5 class="card-title subtitle">Joseph Lane</h5>
                       <p><em>Radio Programme Controller</em><p>
                       <p class="card-text">Joseph leads programming teams on commercial radio stations and manages advertisement content.</p>
+                      <br>
                       <a href="#" class="btn btn-primary"><i class="far fa-envelope"></i> Email</a>
                       <a href="#" class="btn btn-primary"><i class="fas fa-user-circle"></i> Profile</a>
                     </div>
