--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             <br>
             <p class="subtitle"><em>Are you ready to go on a journey?</em></p>
             <br>
-            <a href="community.html"><button type="button" class="btn btn-primary"><i class="fas fa-clipboard-list"></i>
-            Checkout my Community!</button></a>
+            <div class="text-center">
+              <a href="community.html"><button type="button" class="btn btn-primary "><i class="fas fa-clipboard-list"></i>
+              Checkout my Community!</button></a>
+            </div>
             <br>
             <br>
             <br>
