--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- custom css -->
     <link rel="stylesheet" href="css/main.css">
-    <title>A Look into Your Future</title>
+    <title>Community Connect</title>
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee|Roboto" rel="stylesheet">
