--- a/interests.html
+++ b/interests.html
@@ -19,7 +19,7 @@
         <div class="col">
           <br>
           <h1 class="title">It seems like you might be interested in Building and Construction Trades.</h1>
-          <p class="subtitle">An occupation in this field is called Architectural and Engineering Manager.</p>
+          <p class="subtitle">An occupation in this field is called Architectural and Engineering Manager</p>
         </div>
         <div class="card-columns">
           <div class="card">
