adds markers on community

--- a/community.html
+++ b/community.html
@@ -21,6 +21,9 @@
           <div class="centered">
             <p class="title text-center">Explore your community!</p>
           </div>
+          <img src="image/pin.png" class="radiostationPin">
+          <img src="image/pin.png" class="bankPin"></img>
+          <img src="image/pin.png" class="constructionPin"></img>
           <img src="image/box.png" id="radiostationDot" class="textbox" style="width: 260px;height: 250px;" data-toggle="tooltip" data-html="true" title="<strong>Solidarity Radio Station </strong>">
           <img src="image/box.png" id="bankDot" class="textbox" style="width: 100px;height: 400px;" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong>Elevate Social Impact Credit Union</strong>">
           <img src="image/box.png" id="constructionDot" class="textbox" style="width: 260px;height: 250px;" data-toggle="tooltip" data-html="true" title="<strong>TIErs Construction Company</strong>">
