--- a/matches.html
+++ b/matches.html
@@ -243,7 +243,7 @@
         </div>
       </div>
     </div>
-    <a class="carousel-control-prev text-left" href="#my_carousel" role="button" data-slide="prev">
+    <a class="carousel-control-prev text-left" href="#my_carousel" role="button" data-slide="prev" style="position: absolute; top: 10%;">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
